# wannier-berri

./: .flake8  .gitignore  .readthedocs.yaml  CHANGES.txt  DOS.py  Fe-nscf-irred-444.gpw  Fe-scf.gpw  MANIFEST.in  README.md  README.rst  README.txt  README_TESTS.rst  RELEASE_NOTES.md  __evaluate.py  __main__.py  __mmn2uHu.py  __symmetry.py  __system_pythtb.py  __tabulate.py  __utility.py  __w90_files.py  aux.py  berry.py  codecov.yml  comment-PR-version-1.0.0.rst  count_lines.sh  get_data.py  new_tests.ipynb  parallel.py  pyproject.toml  resease-note-0.10.0.rst  setup.cfg  setup.py  uploadpypi.sh  wan_ham.py  wannier19.py
.github/: codecov.yml  install_script.sh
.github/workflows/: ci.yml  codecov.yml  lint.yml  publish-pypi.yml
Te/: example-Te-dipole.py
_trash/: README.md  ase.py  postw90.py  postw90.rst  workflow.py
_trash/tellurium-spinor/: run_workflow.py
docs/: .gitignore  Makefile  README.md  conf.py  index.rst  requirements.txt
docs/source/: benchmark.rst  capabilities.rst  conf.py  contribute.rst  documentation.rst  example.py  exampleFe.rst  index.rst  install.rst  literature.rst  methods.rst  newfeatures.rst  people.rst  shortcuts.rst  software.rst  symmetries.rst  timing.rst
exampleFe/: Fe_HH_save.info
exampleTe/: Te_HH_save.info
examples/: Haldane_PythTB2WB.py  Haldane_TBmodels2WB.py  apply_log.py  example_1k.py  example_ase.py  example_fplo.py  example_phonon.py  example_w90.py  lindhard.ipynb  tutorial-tetrahedral-grids.ipynb  wannierberri.out
examples/exampleFe/: Fe.win  Fe.win0  Fe.wpout-ws=F  Fe.wpout-ws=T  README.md  calc_AHC.py  calc_Morb.py  out-ws=F  out-ws=T  reference  run.sh
examples/exampleFe-gyrotropic/: calc_spin.py
examples/exampleFe-tabulate/: apply_log.py  tabEnk.py
examples/find-projections/: find-projections-autowp.py  find-projections.py
examples/gpaw+ase/: Tellurium-gpaw+wan.py  Tellurium-wberri.py
examples/graphene_gpaw/: graphene.ipynb
examples/interpolate_system/: example_Fe.py
examples/interpolate_system_soc/: 1.gpaw.py  2.wannierise.py  3.interploate.py
examples/parallel-ray/: example.py
examples/sitesym/: diamond.eig  diamond.win  disentangle-sitesym.py  wannierise-sitesym-proper_dmn.py  wannierise-sitesym.py
examples/soc_nscf/: soc_hamiltonian.py  soc_nscf.py
examples/sot_MnTe/: 1_scf+nscf+write_w90.py  2_wannierise_all.py  3_sot_fat_bands.py  4_torkance_MnTe.py  README.txt
examples/sot_torkance_Fe/: result-torkance_iter-0000.npz  sot_fat_bands_Fe.py  sot_torkance_Fe.txt  torkance_bcc_Fe.py
examples/sym/: diamond.nscf  diamond.win  try.py
examples/sym_wann_2/: example.py
examples/tellurium-spinor/: run_workflow.py
examples/wannierise/: disentangle.py
examples/wannierise+sitesym_Fe/: wannierise.ipynb  wannierise_Fe.py
examples/wannierise+sitesym_Ni4W/: Ni4W.sawf.npz  find-projections.py  out-find-projections.txt  wannierise.py
examples/wannierise+sitesym_diamond/: wannierise-sitesym+compare.py  wannierise-sitesym+freezeproj.py  wannierise-sitesym.py  wannierise-sitesym_2.py
examples/wannierise_Fe_irred/: compare.py  plot.py  wannierise_Fe_ibz.py  wannierise_Fe_ibz_spd.py
examples/workflow/: run_workflow.py
modules/: DOS.py  aux.py  berry.py  berry2.py  berry_old.py  data_dk.py  dos.py  fourier.py  get_data.py  gyrotropic.py  integrate.py  integrateXnk.py  kpoint.py  parallel.py  parent.py  profile.py  result.py  spin.py  symmetry.py  tabulate.py  tabulateXnk.py  utility.py  wan_ham.py  wannier19.py  ws_dist_2.py  ws_dist_map.py  ws_dist_map2.py
tests/: .gitignore  README.rst  common.py  common_comparers.py  common_parallel.py  common_systems.py  compare_result.py  conftest.py  create_system.py  test_ahc.py  test_aux.py  test_berry.py  test_bkvec.py  test_calc.py  test_cluster.py  test_create_w90_files.py  test_data_k.py  test_degensearch.py  test_evaluate_k.py  test_exceptions.py  test_find_projections.py  test_formatted.py  test_formula.py  test_hr_file.py  test_integrate.py  test_kubo.py  test_mmn2uhu.py  test_path.py  test_plotWF.py  test_point_symmetry.py  test_postw90.py  test_print.py  test_projections.py  test_run.py  test_select_window_degen.py  test_slurm.py  test_smoother.py  test_sot.py  test_spherical.py  test_spin_bcd.py  (+12 more)
tests/data/: graphene-bands-dft.npz
tests/reference/: Chiral_OSD_SDCT-SDCT_asym+spin_iter-0000.npz  (+213 more)
tutorial/: .gitignore  Haldane_PythTB2WB.py  Haldane_TBmodels2WB.py  Li_bcc_PythTB2WB.py  Li_bcc_TBmodels2WB.py  boltzmann_grid.py  disentangle.py  example.py  example_1k.py  example_ase.py  example_fplo.py  example_phonon.py  example_run.py  example_run_od.py  li_bcc.py  li_bcc_pythtb.py  li_bcc_tbmodels.py  tutorial-tetrahedral-grids.ipynb
wannier19/: __berry.py  __data_dk.py  __dos.py  __evaluate.py  __get_data.py  __gyrotropic.py  __init__.py  __integrate.py  __integrateXnk.py  __kpoint.py  __main.py  __nonabelian.py  __result.py  __spin.py  __system.py  __tabulate.py  __tabulateXnk.py  __utility.py  __wannier19_main.py  berry.py  data_dk.py  dos.py  get_data.py  gyrotropic.py  integrate.py  integrateXnk.py  result.py  spin.py  tabulateXnk.py
wannierberri/: __Data_K.py  __Kpoint.py  __Kpoint_tetra.py  __berry.py  __cluster_template.py  __covariant.py  __data_dk.py  __disentangle.py  __dos.py  __evaluate.py  __factors.py  __fermi_ocean.py  __fermiocean.py  __fermiocean2.py  __fermiocean3.py  __fermisea.py  __fermisea2.py  __finite_differences.py  __formula.py  __formula_3.py  __formulak.py  __formulas_nonabelian.py  __formulas_nonabelian_3.py  __grid.py  __grid_tetra.py  __gyrotropic.py  __init__.py  __integrate.py  __kpoint.py  __kubo.py  __main.py  __main__.py  __mmn2uHu.py  __nonabelian.py  __nonabelian_formula.py  __parallel.py  __path.py  __plot_path.py  __result.py  __result_tab.py  (+51 more)
(+2063 files in other folders)
