[metadata]
version = attr: wannierberri.__version__

[flake8]
ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222,
          E261, E262, E266, E303,
          E741, W391, W503
         #  do not assign a lambda expression, use a def - we like it in sym_wann
         E731,
         # do not compare types
         E721,
         # line too long
         E501,
         # multiple spaces before keyword
         E272,
         # closing bracket does not match visual indentation
         E124,
         # continuation line under-indented for visual indent
         E128,
         # invalid escape sequence  - does not allow to use LaTeX
         W605

exclude = .git, __pycache__, build, dist, __init__.py .eggs, *.egg
max-line-length = 120

per-file-ignores = conftest.py:F401

[yapf]
based_on_style = pep8
column_limit = 120
indent_width = 4
split_before_logical_operator = true
split_before_first_argument = true
split_before_arithmetic_operator = true
