[metadata]
version = attr: wannierberri.__version__

[flake8]
ignore = E126, 
         # continuation line over-indented for hanging indent
         E266,
         # too many leading '#' for block comment
         E741,
         # ambiguous variable name
         W504,
         # line break after binary operator
         E303,
         # too many blamk lines
         E731,
         #  do not assign a lambda expression, use a def - we like it in sym_wann
         E721,
         # do not compare types
         E501,
         # line too long
         E272,
         # multiple spaces before keyword
         E124,
         # closing bracket does not match visual indentation
         E128,
         # continuation line under-indented for visual indent
         W503,
         # line break before binary operator 
         W605
         # invalid escape sequence  - does not allow to use LaTeX

exclude = .git, __pycache__, build, dist, __init__.py .eggs, *.egg
max-line-length = 120

per-file-ignores = conftest.py:F401

[yapf]
based_on_style = pep8
column_limit = 120
indent_width = 4
split_before_logical_operator = true
split_before_first_argument = true
split_before_arithmetic_operator = true
